# conxius-enclave-sdk

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  BRANCHES_INDEX.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEBT_INVENTORY.md  GOVERNANCE.md  ISSUES_INDEX.md  NEXT_SESSION_PLAN.md  PRODUCTION_READINESS.md  PRS_INDEX.md  README.md  RELEASING.md  REPOSITORY_ANALYSIS.md  REPO_OWNERSHIP.md  RESEARCH_LOG.md  SECURITY.md  SESSION_HISTORY.md  SUPPORT.md  TRACKING.md  deny.toml  notes.md  pre_commit_review.json
.cargo/: audit.toml
.circleci/: config.yml
.github/: CODE_REVIEW_REQUEST.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cxn_bounty_job_card.yml  governance_request.yml
.github/scripts/: check_upstream.py  verify-registry-artifact.sh  verify-release-artifacts.sh  verify-release-metadata.sh
.github/workflows/: ci-strict.yml  ci.yml  codeql.yml  coverage.yml  crates-publish.yml  dependency-review.yml  hygiene.yml  provenance.yml  release-strict.yml  release.yml  sbom.yml  secret-scan.yml  security-strict.yml  security.yml  track-management.yml  wasm-runtime-evidence.yml  wasm-runtime.yml
contracts/: concentrated-liquidity-pool.clar
contracts/lending/: lending-manager.clar
contracts/oracle/: oracle-aggregator.clar
docs/: BRANCH_POLICY.md  BRANCH_PROTECTION.md  CON-625_MAINNET_AUDIT.md  ENVIRONMENT_PROTECTION.md  ETHOS.md  INTEGRATED_SYSTEM_TESTNET_GATE.md  PHASE1_ISSUES_ROADMAP.md  REMEDIATION.md  SYSTEM_ALIGNMENT.md  SYSTEM_GRAPH.md  UNIVERSAL_BLOCKCHAIN_SUPPORT.md  UNIVERSAL_SUPPORT_RESEARCH.md
docs/architecture/: APPROVED_BRIDGE_AND_MESSAGING_SYSTEMS_BY_TRUST_TIER.md  BITVM2_ARK_RESEARCH.md  CANONICAL_NAMING_STANDARD.md  CAPABILITY_MATRIX.md  CONTROL_MODEL_ADAPTER_BOUNDARY.md  GAP_SCORECARD.md  IMPROVEMENT_PROPOSALS.md  ISSUE-240_PHASE_A_CONTRACT.md  PROOF_POLICY_SPEC.md  PROTOCOL_IMPLEMENTATION_ROADMAP.md  REMEDIATION.md  REPO_CLASSIFICATION.md  SDK_BOUNDARY_CONTRACT.md  SIGNER_BACKEND_POLICY_MATRIX.md  STABLECOIN_PAYMENT_FRAMEWORK.md  SYSTEM_ALIGNMENT.md  TRAD_PAYMENTS_ALIGNMENT.md  TRUST.md  TRUST_REPLAY_FOUNDATION.md  TRUST_REPLAY_RELEASE_CONTRACTS.md  UNIVERSAL_BLOCKCHAIN_SUPPORT.md  UNIVERSAL_SUPPORT_RESEARCH.md  WASM_SUPPORT_MATRIX.md  capability-evidence.json
docs/audits/: CON-610_GATEWAY_AUDIT.md  CON-625_MAINNET_AUDIT.md  CON-627_AUDIT_FINDINGS.md  DEPLOYMENT_VERIFICATION_MATRIX.md  ISSUE-196_CANONICAL_VERIFICATION_EVIDENCE_2026-07-21.md  PR-214_CONTAINMENT_EVIDENCE_2026-07-20.md  PR-237_HARDWARE_ATTESTATION_RESEARCH_2026-07-22.md  PRODUCTION_ENABLEMENT_AUDIT_2026-07-20.md
docs/guides/: FROST_TREASURY_INTEGRATION.md
docs/migrations/: wasm-key-boundary.md
docs/operations/: PUBLIC_OPERATIONS_RUNBOOK.md  RELEASE_RECOVERY_RUNBOOK.md  TELEMETRY_OPERATIONS.md
docs/protocols/: BIP110_ALIGNMENT.md
examples/: README.md  ark_vutxo_derivation.rs  attestation_verification.rs  basic_signing.rs  fedimint_federation.rs  multi_chain_signing.rs  wasm_integration.rs
issues/: 0092.md  0104.md  0145.md  0146.md  0154.md  0169.md  0172.md  0173.md  0174.md  0175.md  0176.md  0179.md  0180.md  0191.md  0194.md  0195.md  0196.md  0197.md  0198.md  0199.md  0200.md  0201.md  0202.md
maintenance/: notes.md  pre_commit_review.json
prs/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  0011.md  0012.md  0013.md  0014.md  0015.md  0016.md  0017.md  0018.md  0019.md  0020.md  0021.md  0022.md  0023.md  0024.md  0025.md  0026.md  0027.md  0028.md  0029.md  0030.md  0031.md  0032.md  0033.md  0034.md  0035.md  0036.md  0037.md  0038.md  0039.md  0040.md  (+157 more)
scripts/: run_wasm_runtime_evidence.sh  sync_issues.sh  validate_capability_evidence.py  wasm_runtime_browser.cjs  wasm_runtime_evidence.sh  wasm_runtime_harness.mjs
scripts/tests/: test_validate_capability_evidence.py
scripts/wasm_runtime/: boundary_assertions.mjs  browser.html  worker.mjs
src/: config.rs  lib.rs  telemetry.rs  wasm_bindings.rs  wasm_support.rs
tests/: issue_240_phase_a.rs  production_rail_containment.rs  proof_verification.rs  trust_contracts.rs
(+82 files in other folders)
